flexvolume-drivers/ky-template-policy-allowlist-flexvolume.yaml
# maartenvdezz & frankwiersma
# 23-06-2021

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-seccomp
  annotations:
    policies.kyverno.io/title: Restrict Seccomp
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      The runtime default seccomp profile must be required, or only specific
      additional profiles should be allowed.
spec:
  background: true
  validationFailureAction: enforce
  rules:
  - name: seccomp
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: >-
        This flexvolume driver is not allowed. Flexvolume driver must be unset or set to `example/lvm` or `example/cifs`.
      pattern:
        spec:
          volumes:
          - =(flexVolume):
              =(driver): "example/lvm | example/cifs"
